[package]
name = "quick-error2"
description = "A macro which makes error types pleasant to write."
license = "MIT/Apache-2.0"
version = "2.0.0"
keywords = ["macro", "error", "type", "enum"]
authors = [
    "Paul Colomiets <paul@colomiets.name>",
    "Colin Kiegel <kiegel@gmx.de>",
    "Ross MacArthur <ross@macarthur.io>"
]
homepage = "http://github.com/rossmacarthur/quick-error2"
repository = "http://github.com/rossmacarthur/quick-error2"
documentation = "http://docs.rs/quick-error2"
categories = ["rust-patterns"]
edition = "2018"
